@@ -50,7 +50,16 @@ allprojects {
     systemProperty("CURRENT_VERSION", "$version")
     systemProperty("arrowVersion", libs.versions.arrow.get())
     systemProperty("jvmTargetVersion", properties["jvmTargetVersion"].toString())
-    jvmArgs = listOf("""-Dkotlin.compiler.execution.strategy="in-process"""")
+    jvmArgs = listOf(
+      """-Dkotlin.compiler.execution.strategy="in-process"""",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
+    )
   }
 }
 
